syntax = "proto3";

option java_multiple_files = true;
package communication;
import "model.proto";

service rateService {
  rpc rateAccommodation(AccommodationRate) returns (MessageResponse);
  rpc changeAccommodationRate(AccommodationRate) returns (AccommodationRate);
  rpc deleteAccommodationRate(UserIdRequest) returns (AccommodationRate);
  rpc findAllByAccommodationId(UserIdRequest) returns (ListAccommodationRate);
}